Bug 357381 - Search Duplicate Contacts menu item open a wrong dialog
Summary: Search Duplicate Contacts menu item open a wrong dialog
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-01 02:55 UTC by André Marcelo Alvarenga
Modified: 2016-05-12 05:30 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description André Marcelo Alvarenga 2016-01-01 02:55:51 UTC
Select a contact
Click on File ->  Search Duplicate Contacts...
Message displayed: You must select at least two elements.
Dialog title: Select Contacts to merge - KAddressBook

Select 2 or more contacts
Click on File ->  Search Duplicate Contacts...
Message displayed: No duplicated contact found.
Dialog title: Select Contacts to merge - KAddressBook

I think this action should find duplicate contacts without select any contacts.
Dialog title should have a correct title name.

Reproducible: Always
Comment 1 Laurent Montel 2016-05-12 05:14:44 UTC
I didn't want to search in all addressbook as it can take more time to fetch and co.
But we do it for printing so I can test to do it.
Comment 2 Laurent Montel 2016-05-12 05:30:14 UTC
Git commit 9829d9b7c58c18317be353ff14fb74908c52b4b7 by Montel Laurent.
Committed on 12/05/2016 at 05:29.
Pushed by mlaurent into branch 'master'.

Fix Bug 357381 - Search Duplicate Contacts menu item open a wrong dialog

M  +2    -2    kaddressbook/plugins/searchduplicates/searchduplicatesplugininterface.cpp
M  +1    -1    kaddressbook/plugins/searchduplicates/searchduplicatesplugininterface.h

http://commits.kde.org/kdepim-addons/9829d9b7c58c18317be353ff14fb74908c52b4b7