Fix Bug 357381 - Search Duplicate Contacts menu item open a wrong dialog

BUG: 357381